--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -27,8 +27,10 @@
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.2.1",
     "simplex-noise": "^4.0.3",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
